--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 os: osx
 language: csharp
+before_install:
+- chmod a+x ./Scripts/install.sh
+- chmod a+x ./Scripts/build.sh
 install:
-    - sudo python2 ./scripts/install-unity.py --package Unity 2017.3.1f1
+- ./Scripts/install.sh
+script:
+- ./Scripts/build.sh
 before_script:
     - sudo chmod -R a+rwx /Applications/Unity
-script:
-    - ./scripts/build.sh
